# terminal

emulator/: Cargo.toml
emulator/src/: main.rs
termie/: Cargo.toml  README.md  docker-compose.yaml
termie/src/: http_client.rs  main.rs
