[package]
name = "termie"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
eframe = "0.33.0"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "http1", "tokio"] }
nix = { version = "0.30.1", default-features = false, features = ["term", "process", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
